# boyce

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  OPUS_BRIEF.md  README.md  RELEASING.md  ROADMAP.md  SESSION_LOG.md  pyproject.toml  quickstart.sh  server.json
.claude/handoffs/: CC_HANDOFF_BENCHMARK_BUGFIX.md  CC_HANDOFF_LIFECYCLE_TESTING.md  CC_HANDOFF_VERSION_LIFECYCLE.md  handoff-validate-sql-and-freshness.md
.claude/handoffs/_archive/: CC_EXECUTION_PLAN.md  (+8 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml
_management_documents/: 2026-02-28 - DataShark Product Brainstorming.md  2026-03-06_client_reference_strip_plan.md  2026-03-06_sprint_planning_session.md  NAME_AVAILABILITY_AUDIT.md  NAMING_CROWDSOURCE_PROMPT.md  NAMING_REQUIREMENTS_BRIEF.md  README.md  SESSION_BRIEFING_2026-03-04.md
_management_documents/DataShark Rename MDs/: DataShark Rename - GPT.md  DataShark Rename - Gemini.md  DataShark Rename - Kimi25.md
_strategy/: MASTER.md  mcp-directory-submissions.md
_strategy/history/: testing-sprint-log.md
_strategy/plans/: agent-adoption-docs-sync.md  agentic-ingestion-sprint.md  benchmark-program.md  block-1-ship-it.md  block-1b-vscode-extension.md  block-2-protocol-and-parsers.md  block-3-governance-and-ecosystem.md  block-4-ecosystem-and-adoption.md  init-wizard-overhaul.md  phase-3-platform-expansion.md  phase-4-preliminary-benchmark.md  phase-4b-benchmark-bugfix.md  telemetry-design.md  terminology-rename.md  test-warehouse-tiers.md
_strategy/research/: 2026-02-28_competitive_landscape.md  benchmark-database-candidates.md  codex-mcp-config.md  preliminary-benchmark-gpt4o.json  preliminary-benchmark-gpt4o.md  preliminary-benchmark-haiku.json  preliminary-benchmark-haiku.md  preliminary-benchmark-v2.json  preliminary-benchmark-v2.md  preliminary-benchmark.json  preliminary-benchmark.md  sprint0-diagnosis.json  sprint0-haiku-diagnosis.md
boyce/: pyproject.toml
boyce/boyce/: __init__.py  cli.py  kernel.py  safety.py  scan.py  server.py  types.py  validation.py
boyce/boyce/adapters/: __init__.py  base.py
boyce/boyce/parsers/: __init__.py  django.py  lookml.py  prisma.py  registry.py  sqlite.py
boyce/boyce/sql/: builder.py  dialects.py  join_resolver.py
boyce/src/boyce/: audit.py  cli.py  connections.py  discovery.py  doctor.py  graph.py  http_api.py  init_wizard.py  kernel.py  profiler.py  safety.py  scan.py  server.py  store.py  types.py  validation.py  version_check.py
boyce/src/boyce/adapters/: postgres.py
boyce/src/boyce/parsers/: base.py  dbt.py  ddl.py  detect.py  django.py  lookml.py  sqlalchemy_models.py  tabular.py
boyce/src/boyce/planner/: __init__.py  planner.py
boyce/src/boyce/sql/: builder.py  join_resolver.py
boyce/tests/: conftest.py  test_advertising.py  test_audit.py  test_bugfix_phase4b.py  test_cli_smoke.py  test_connections.py  test_definitions.py  test_discovery.py  test_doctor.py  test_init.py  test_kernel_tools.py  test_parsers.py  test_profiler.py  test_response_guidance.py  test_scan.py  test_sprint1a_schema_extensions.py  test_validate_sql.py  test_version_check.py  verify_eyes.py
boyce/tests/benchmark/: queries.json  run_benchmark.py  sprint0_diagnosis.py
boyce/tests/capability/: __init__.py  test_join_path_selection.py  test_kernel_determinism.py  test_null_trap_detection.py
boyce/tests/live_fire/: docker-compose.yml  mock_snapshot.json  run_mission.py  seed.sql
boyce/tests/validation/: docker-compose.yml  integration_guides.md  query_battery.md  setup.sh  testing_runbook.md
boyce/tests/validation/init/: .gitignore
demo/magic_moment/: DEMO_SCRIPT.md  docker-compose.yml  manifest.json  seed.sql  snapshot.json  verify_demo.py
docs/: QUICK_START.md  local-llm-setup.md  troubleshooting.md
docs/essays/: null-trap.md
extension/: package-lock.json  package.json
extension/src/: client.ts  extension.ts  process.ts  types.ts
legacy_v0/: README.md  requirements.txt  setup.py  setup_dev.sh  verify_hover.py
legacy_v0/DataShark_Agents/: DATASHARK_AGENTS_CONTEXT_PACKET.md  pyproject.toml  run_watcher.py  test_connection.py
legacy_v0/DataShark_Client/: README.md  package-lock.json  package.json
legacy_v0/config/: config.example.json
legacy_v0/dbeaver_plugin/: plugin.xml  pom.xml
legacy_v0/distribution/: CURSOR_MCP_APP_CONFIG.md
legacy_v0/extensions_mcp/: cli.py  cline_mcp_config.json  install.sh  mcp_config.json  pyproject.toml  test_advanced_tools.py  test_standalone.py
legacy_v0/extensions_mcp/docs/: SNAPSHOT_CAS.md
legacy_v0/extensions_mcp/src/eval/: __init__.py
legacy_v0/extensions_mcp/src/safety_kernel/: __init__.py  redshift_guardrails.py
legacy_v0/extensions_mcp/tests/: mock_data.py  test_audit.py  test_golden_harness.py
legacy_v0/extensions_mcp/tests/unit/kernel/: __init__.py  test_air_gap_leak.py  test_snapshot_store.py
legacy_v0/extensions_mcp/tools/: README_GOLDEN_HARNESS.md  golden_harness.py  ingest.py  telemetry_dashboard.py
legacy_v0/extensions_vscode_extension/: package-lock.json  package.json
legacy_v0/scripts/: audit_doc_sync.py  check_markdown_locations.py  context_verify.py  determinism_audit.py  generate_api_docs.py  setup_env.sh  sweep_cursor_workspace.py  validate_all.py  verify_governance_behavior.py
legacy_v0/tests/: __init__.py  integrity_check.py  manual_governance_test.py  test_crawler.py  test_determinism_proof.py  test_universe_small_retail.py  verify_server_handshake.py
legacy_v0/tools/: audit_redshift_transformer.py  context_reset.py  db_inspector.py  debug_sqlparse_tokens.py  test_golden_query_1.py  test_golden_query_1_sql.py  test_golden_query_2.py  test_join_path_resolver.py  test_redshift_transformer_stress.py
test_warehouses/: .gitignore  README.md  setup.sh
test_warehouses/django_models/: models.py
test_warehouses/postgres_ddl/: ecommerce.sql
test_warehouses/prisma_schema/: schema.prisma
test_warehouses/sample_sqlite/: analytics.sqlite
test_warehouses/sqlalchemy_models/: models.py
(+332 files in other folders)
