[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashark-protocol"
version = "0.1.0"
description = "Headless FastMCP reference implementation of the DataShark protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "sqlparse>=0.4.4",
    "PyYAML>=6.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]

[project.scripts]
datashark-protocol = "datashark_protocol.server:main"

[tool.setuptools.packages.find]
where = ["datashark-protocol"]
include = ["datashark_protocol*"]

[tool.pytest.ini_options]
pythonpath = ["datashark-protocol", "legacy_v0/src"]
testpaths  = ["datashark-protocol/tests"]
