[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boyce"
version = "0.1.0"
description = "Semantic protocol and safety layer for agentic database workflows"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Will Wright"}]
keywords = ["sql", "mcp", "agents", "database", "semantic", "llm", "ai", "protocol", "redshift", "postgres"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "sqlparse>=0.4.4",
    "PyYAML>=6.0",
    "litellm>=1.0.0",
]

[project.urls]
Homepage = "https://boyce.io"
Repository = "https://github.com/boyce-io/boyce"
"Bug Tracker" = "https://github.com/boyce-io/boyce/issues"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
parquet = ["pyarrow>=14.0.0"]
http = ["starlette>=0.27.0", "uvicorn>=0.20.0"]

[project.scripts]
boyce = "boyce.cli:main"
boyce-scan = "boyce.scan:main"
boyce-init = "boyce.init_wizard:main"

[tool.setuptools.packages.find]
where = ["src"]
